# pam_nps_mfa

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SPEC.md  LICENSE  README.md  SECURITY_DESIGN.md  SPEC_AMENDMENTS.md  TEST_VECTORS.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/audit/: Cargo.toml  build.rs
crates/audit/src/: ffi.rs  lib.rs  record.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config/tests/: load.rs  parser.rs  permissions.rs
crates/config/tests/common/: mod.rs
crates/config/tests/fixtures/: sample.conf
crates/mschapv2/: Cargo.toml
crates/mschapv2/src/: crypto.rs  flow.rs  lib.rs  vsa.rs
crates/mschapv2/tests/: vectors.rs
crates/pam-ffi/: Cargo.toml  build.rs
crates/pam-ffi/src/: audit_emit.rs  conversation.rs  ffi.rs  flow.rs  lib.rs  options.rs
crates/pam-ffi/tests/: audit_emission.rs  flow_return_codes.rs  symbols.rs
crates/pap/: Cargo.toml
crates/pap/src/: lib.rs
crates/pap/tests/: vectors.rs
crates/radius/: Cargo.toml
crates/radius/src/: auth.rs  binding.rs  lib.rs  packet.rs  parse.rs  test_support.rs  transport.rs  udp.rs
crates/radius/tests/: transport_loopback.rs  vectors.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
docs/: phase9-nps-validation.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: radius_response.rs
packaging/: build-deb.sh  build-in-ubi9.sh  build-rpm.sh  check-deb-install.sh  check-rpm-install.sh  pam_nps_mfa.spec
packaging/dev/: pamtester-smoke.sh
packaging/selinux/: pam_nps_mfa.fc  pam_nps_mfa.if  pam_nps_mfa.te
