[package]
name = "radius"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# HMAC-MD5 (Message-Authenticator, RFC 3579) and MD5 (Response Authenticator,
# RFC 2865). Versions pinned in the workspace per IMPLEMENTATION_SPEC.md §2.
md-5.workspace = true
hmac.workspace = true
# Constant-time comparison for every authenticator/MAC check (CLAUDE.md rule 7).
subtle.workspace = true
# OS CSPRNG for the Request Authenticator; failure denies (CLAUDE.md rule 18).
getrandom.workspace = true

[features]
# Exposes the public in-memory FakeTransport (src/test_support.rs) used by the
# pam-ffi flow tests (phase 5) and the transport tests (phase 6). Test-only
# tooling; never enabled by the production cdylib build.
test-support = []

[dev-dependencies]
hex-literal.workspace = true
