[package]
name = "secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Zeroize-on-drop wrappers for all key material (SECURITY_DESIGN.md §3/§7,
# CLAUDE.md rule 8). The `derive` feature (enabled in the workspace) gives us
# `#[derive(Zeroize, ZeroizeOnDrop)]`.
zeroize.workspace = true

[dev-dependencies]
hex-literal.workspace = true
